Fixed some bugs: mistake, thich I made during previous commits - content in questions was overflowing cointainer, set min-height in header subtitle

--- a/src/project2/styles/themes/default/components/_header-styles.scss
+++ b/src/project2/styles/themes/default/components/_header-styles.scss
@@ -30,7 +30,8 @@
 
 	&__subtitle{
 		@include setFlex(row, center, center);
-		min-height: 30%;
+		height: 30%;
+		min-height: 2.8rem;
 		width: 100%;
 		background: linear-gradient(90deg, $c-transparent 0%, $c-transparent 10%, $c-grape 50%, $c-transparent 90%, $c-transparent 100%);
 		font-family: 'Lato', cursive;
